syntax = "proto3";

option csharp_namespace = "Grpc.BlogService";

import "google/protobuf/duration.proto";  
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/struct.proto";

package Blog;

service Blog {
  rpc Filter (FilterRequest) returns (PageReply);
  rpc Add (AddRequest) returns (BlogReply);
  rpc Update (UpdateRequest) returns (BlogReply);
  rpc Delete (IdRequest) returns (BlogReply);
  rpc Detail (IdRequest) returns (BlogReply);
}

message BlogReply
{
    string translate_title = 1;
    string translate_content = 2;
    LanguageType language_type = 3;
    string title = 4;
    string description = 5;
    string content = 6;
    string authors = 7;
    string id = 8;
    google.protobuf.Timestamp created_time = 9;
    google.protobuf.Timestamp updated_time = 10;
    bool is_deleted = 11;
}

message FilterRequest
{
    int32 page_size = 1;
    int32 page_index = 2;
    string translate_title = 3;
    LanguageType language_type = 4;
    string title = 5;
    string description = 6;
    string authors = 7;
}

message AddRequest
{
    string translate_title = 1;
    string translate_content = 2;
    LanguageType language_type = 3;
    string title = 4;
    string description = 5;
    string content = 6;
    string authors = 7;
}

message UpdateRequest
{
    string translate_title = 1;
    string translate_content = 2;
    LanguageType language_type = 3;
    string title = 4;
    string description = 5;
    string content = 6;
    string authors = 7;
}

message IdRequest
{
    string id = 1;
}

message PageReply
{

    int32 count = 1;
    repeated BlogReply data = 2;
    int32 page_index = 3;
}

enum LanguageType
{
    CN = 0;
    EN = 1;
}
